--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.1.0",
     "@angular/material": "^16.1.5",
+    "@angular/material-moment-adapter": "^16.1.5",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "angular-chart.js": "^1.1.1",
+    "chart.js": "^4.3.0",
     "ngx-cookie-service": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
